added color to button on form

--- a/flaskProject/templates/Sync.html
+++ b/flaskProject/templates/Sync.html
@@ -45,8 +45,7 @@
           </tr>
         </tbody>
       </table>
-      <button type="button" class="btn btn-secondary">Sync</button>
-
+        <button type="button" style= "background-color: grey" class="btn btn-secondary">Sync</button>
     </form>
     <!-- content goes here -->
 
