added place holder text to the help page

--- a/flaskProject/templates/Help.html
+++ b/flaskProject/templates/Help.html
@@ -3,7 +3,18 @@
 
 <!-- html code for the body of the page-->
 {% block content %}
-    <h1>HELP content Overview </h1>
+    <h1>Help</h1>
+    <p>This is meant to have FAQs</p>
+    <h3>FAQ1</h3>
+    <p>FAQ answer</p>
+    <h3>FAQ2</h3>
+    <p>FAQ2 answer</p>
+    <h3>FAQ3</h3>
+    <p>FAQ3 answer</p>
+    <h3>FAQ4</h3>
+    <p>FAQ4 answer</p>
+    <h3>FAQ5</h3>
+    <p>FAQ5 answer</p>
     <!-- content goes here -->
 
 {% endblock %}
