--- a/flaskProject/templates/Sync.html
+++ b/flaskProject/templates/Sync.html
@@ -57,7 +57,7 @@
         <h3>Sidebar</h3>
         <p class='text-muted'>You can put any information here you'd like.
         <ul class="list-group">
-            <li class="list-group-item list-group-item-light"><a href=""> Event Tree</a></li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventTree') }}"> Event Tree</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventView') }}"> Systems</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('Tasks') }}"> Tasks</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('Subtasks') }}"> Subtasks</a></li>
