Center the Log in and remove dummy data in Event view

--- a/flaskProject/templates/EventView.html
+++ b/flaskProject/templates/EventView.html
@@ -10,48 +10,46 @@
     <br>
 
     <h4>Event name</h4>
-    <p>This is some other text.</p>
+    <p>Testing Wells Fargo ATMs</p>
     <hr>
     <h4>Event description</h4>
-    <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-        lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-        lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+    <p>Penetration test on a Wells Fargo ATMs </p>
     <br>
     <h4>Event type</h4>
-    <p>This is some other text.</p>
+    <p>Cooperative Vulnerability Penetration Assessment</p>
     <hr>
     <h4>Event version</h4>
-    <p>This is some other text.</p>
+    <p>1.0</p>
     <hr>
     <h4>Organization name</h4>
-    <p>This is some other text.</p>
+    <p>Wells Fargo ATM</p>
     <hr>
     <h4>Event classification</h4>
     <p>This is some other text.</p>
     <hr>
     <h4>Customer name</h4>
-    <p>This is some other text.</p>
+    <p>Wells Fargo</p>
     <hr>
     <h4>Event assessment date</h4>
-    <p>This is some other text.</p>
+    <p>1/1/2020</p>
     <hr>
     <h4>Event declassification date</h4>
-    <p>This is some other text.</p>
+    <p>1/8/2020</p>
     <hr>
     <h4>Event location</h4>
-    <p>This is some other text.</p>
+    <p>White Sonds Missile Range, Hunts</p>
     <hr>
     <h4>Test plan title</h4>
-    <p>This is some other text.</p>
+    <p>Test Wells Fargo</p>
     <hr>
     <h4>Switches routers accessed</h4>
-    <p>This is some other text.</p>
+    <p>LAN</p>
     <hr>
     <h4>Event building accessed</h4>
-    <p>This is some other text.</p>
+    <p>1676</p>
     <hr>
     <h4>Event room accessed</h4>
-    <p>This is some other text.</p>
+    <p>126</p>
     <hr>
     <h4>Finding classification</h4>
     <p>This is some other text.</p>
@@ -62,9 +60,6 @@
     <h4>system Categorization Integrity</h4>
     <p>This is some other text.</p>
     <hr>
-    <h4>Finding classification</h4>
-    <p>This is some other text.</p>
-    <hr>
     <h4>system Categorization Availability</h4>
     <p>This is some other text.</p>
     <hr>
@@ -73,10 +68,10 @@
     <br>
 
     <h4>Event lead analyst</h4>
-    <p>This is some other text.</p>
+    <p>Felipe Jovel(FJ), John Rivers(JR)</p>
     <hr>
     <h4>Event non-lead analysts</h4>
-    <p>This is some other text.</p>
+    <p>Oscar Perez(OP), Andres Cuevos(AC)</p>
     <hr>
 
 
