--- a/flaskProject/templates/Login.html
+++ b/flaskProject/templates/Login.html
@@ -1,23 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" type="text/css" href="../static/main.css">
+<!-- html code for the body of the page-->
+{% extends "layout.html" %}
 
-</head>
-<body>
-<div class="form">
-    <form>
-        <div class="fcontainer">
-            <h1>FRIC</h1>
-        </div>
-        <div class="container">
-            <label for="uname"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="uname" required>
-            <a href="{{ url_for('EventView') }}">Login</a>
-        </div>
-    </form>
-</div>
+{% block content %}
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <link rel="stylesheet" type="text/css" href="../static/main.css">
 
+    </head>
+    <body>
+    <style>
+    h1 {margin-left:445px;}
+    h1 {font-size: 40px}
+    h1 {height:150px}
+    div {text-align: center;}
+    div {font-size: 15px}
+    input {font-size: 15px}
+    </style>
+    <div class="form">
+        <form>
+            <div class="fcontainer">
+                <h1 style="text-align:center;">FRIC</h1>
+            </div>
+            <div class="container">
+                <label for="uname"><b style="text-align:center;">Username</b></label>
+                <input type="text" placeholder="Enter Username" name="uname" required>
+                <a href="{{ url_for('EventView') }}">Login</a>
+            </div>
+        </form>
+    </div>
+{% endblock content %}
 
 </body>
 </html>
