--- a/flaskProject/templates/FindingsView.html
+++ b/flaskProject/templates/FindingsView.html
@@ -63,8 +63,9 @@
                         <option>Date</option>
                         <option>Name</option>
                     </select>
+                </div>
             </li>
-            <li class="list-group-item list-group-item-light"><a href=""> Event Tree</a></li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventTree') }}"> Event Tree</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventView') }}"> Systems</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('SystemView') }}"> Tasks</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('TaskView') }}"> Subtasks</a></li>
