Remove some fields and add the ones that are in the final SRS

--- a/flaskProject/templates/EventView.html
+++ b/flaskProject/templates/EventView.html
@@ -24,54 +24,27 @@
     <h4>Organization name</h4>
     <p>Wells Fargo ATM</p>
     <hr>
-    <h4>Event classification</h4>
-    <p>This is some other text.</p>
-    <hr>
-    <h4>Customer name</h4>
+    <h4>Customer name</h4>h4>
     <p>Wells Fargo</p>
     <hr>
-    <h4>Event assessment date</h4>
+    <h4>Assessment date</h4>
     <p>1/1/2020</p>
     <hr>
-    <h4>Event declassification date</h4>
+    <h4>Declassification date</h4>
     <p>1/8/2020</p>
     <hr>
-    <h4>Event location</h4>
-    <p>White Sonds Missile Range, Hunts</p>
+    <h4>Security Classification Title Guide</h4>
+    <p>Name of instruction guide</p>
     <hr>
-    <h4>Test plan title</h4>
-    <p>Test Wells Fargo</p>
+    <h4>Event Classification</h4>
+    <p>[Top secret, Confidential, Classified, Unclassified]</p>
     <hr>
-    <h4>Switches routers accessed</h4>
-    <p>LAN</p>
+    <h4>Archive Status</h4>
+    <p>[Y = archived, N = active]</p>
     <hr>
-    <h4>Event building accessed</h4>
-    <p>1676</p>
-    <hr>
-    <h4>Event room accessed</h4>
-    <p>126</p>
-    <hr>
-    <h4>Finding classification</h4>
-    <p>This is some other text.</p>
-    <hr>
-    <h4>System Categorization Confidentiality</h4>
-    <p>This is some other text.</p>
-    <hr>
-    <h4>system Categorization Integrity</h4>
-    <p>This is some other text.</p>
-    <hr>
-    <h4>system Categorization Availability</h4>
-    <p>This is some other text.</p>
-    <hr>
-
-    <h3>Event Team information</h3>
-    <br>
-
-    <h4>Event lead analyst</h4>
-    <p>Felipe Jovel(FJ), John Rivers(JR)</p>
-    <hr>
-    <h4>Event non-lead analysts</h4>
-    <p>Oscar Perez(OP), Andres Cuevos(AC)</p>
+    <h4>Event Team</h4>
+    <p>Felipe Jovel(FJ), John Rivers(JR),
+        Oscar Perez(OP), Andres Cuevos(AC)</p>
     <hr>
 
 
