Remove some fields

--- a/flaskProject/templates/EditEvent.html
+++ b/flaskProject/templates/EditEvent.html
@@ -21,7 +21,10 @@
             <input class="form-control">
         </div>
         <div class="form-group">
-            <label>Lead analyst</label>
+            <label>Event Description</label>
+            <input class="form-control">
+        <div class="form-group">
+            <label>Event Team</label>
             <select id="" class="form-control">
                 <option>Miguel Munoz</option>
                 <option>Jonathan Roman</option>
@@ -31,7 +34,7 @@
             </select>
         </div>
         <div class="form-group">
-            <label>Non-lead analysts</label>
+            <label>Archive Status</label>
             <input class="form-control">
         </div>
         <div class="form-group">
@@ -51,44 +54,11 @@
         </div>
 
         <div class="form-group">
-            <label for="inputStatus">Event location</label>
-            <input class="form-control">
-        </div>
-        <div class="form-group">
             <label>Event classification</label>
             <input class="form-control">
         </div>
         <div class="form-group">
-            <label>Test plan title</label>
-            <input class="form-control">
-        </div>
-        <div class="form-group">
-            <label>Switches routers accessed</label>
-            <input class="form-control">
-        </div>
-        <div class="form-group">
-            <label>Event building accessed</label>
-            <input class="form-control">
-        </div>
-        <div class="form-group">
-            <label>Event room accessed</label>
-            <input class="form-control">
-        </div>
-        <div class="form-group">
-            <label>Finding classification</label>
-            <input class="form-control">
-        </div>
-        <div class="form-group">
-            <label>System Categorization Confidentiality</label>
-            <input class="form-control">
-        </div>
-        <div class="form-group">
-            <labelSystem Categorixation Integrity
-            </label>
-            <input class="form-control">
-        </div>
-        <div class="form-group">
-            <label>System Categorization Availability</label>
+            <label>Security Classification Title Guide</label>
             <input class="form-control">
         </div>
 
