Improved the setupContentView page.

--- a/flaskProject/templates/SetupContentView.html
+++ b/flaskProject/templates/SetupContentView.html
@@ -32,7 +32,7 @@
             <input type="text" class="form-control" placeholder="Please enter the lead analyst’s IP">
         </div>
         <hr>
-        <a href="{{ url_for('CreateEvent') }}">Submit</a>
+        <button type="submit" class="btn btn-secondary"><a href="{{ url_for('CreateEvent') }}">Submit</a></button>
     </form>
 </div>
 {% endblock content %}
