--- a/flaskProject/templates/EditEvent.html
+++ b/flaskProject/templates/EditEvent.html
@@ -24,14 +24,16 @@
             <label>Event Description</label>
             <input class="form-control">
         <div class="form-group">
-            <label>Event Team</label>
-            <select id="" class="form-control">
+            <label>lead analyst</label>
+            <select class="form-control">
                 <option>Miguel Munoz</option>
                 <option>Jonathan Roman</option>
                 <option>Alberto Machado</option>
-                <option>Christopher Janicky</option>
-                <option>Carlos Dominguez</option>
             </select>
+        </div>
+        <div class="form-group">
+            <label for="inputStatus">non-lead analysts</label>
+            <input class="form-control" id="inputStatus">
         </div>
         <div class="form-group">
             <label>Archive Status</label>
