Remove the dummy data

--- a/flaskProject/templates/TaskView.html
+++ b/flaskProject/templates/TaskView.html
@@ -14,12 +14,10 @@
         </div>
     </div>
     <h4>Task name</h4>
-    <p>This is some other text.</p>
+    <p>Wells Fargo</p>
     <hr>
     <h4>Task description</h4>
-    <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-        lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-        lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+    <p>Attempt to find an exploit on the card reader </p>
     <hr>
     <h4>System: </h4>
     <p>System 1</p>
