--- a/flaskProject/templates/SubTaskView.html
+++ b/flaskProject/templates/SubTaskView.html
@@ -13,12 +13,10 @@
         </div>
     </div>
     <h4>Subtask name</h4>
-    <p>This is some other text.</p>
+    <p>Wells Fargo ATM physical view</p>
     <hr>
     <h4>Subtask description</h4>
-    <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-        lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-        lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+    <p> Attempt to find an exploit on the card reader</p>
     <hr>
     <h4>analyst(s): </h4>
     <ul>
