Remove some dummy data

--- a/flaskProject/templates/FindingView.html
+++ b/flaskProject/templates/FindingView.html
@@ -9,28 +9,28 @@
     <h3>Finding information</h3>
     <hr>
     <h4>Title</h4>
-    <p>This is some other text.</p>
+    <p>Wells Fargo</p>
     <hr>
     <h4>ID</h4>
-    <p>This is some other text.</p>
+    <p>123456789</p>
     <hr>
     <h4>Host Name</h4>
-    <p>This is some other text.</p>
+    <p>Zeus</p>
     <hr>
     <h4>IP:Port</h4>
-    <p>This is some other text.</p>
+    <p>1.1.1.1</p>
     <hr>
     <h4>Description</h4>
-    <p>This is some other text.</p>
+    <p>Blind SQL injection</p>
     <hr>
     <h4>Long Description</h4>
-    <p>This is some other text.</p>
+    <p>Blind SQL injection</p>
     <hr>
     <h4>Status</h4>
-    <p>This is some other text.</p>
+    <p>Open</p>
     <hr>
     <h4>Type</h4>
-    <p>This is some other text.</p>
+    <p>Lack of authentication</p>
     <hr>
     <h4>Classification</h4>
     <p>This is some other text.</p>
@@ -42,7 +42,7 @@
     <p>This is some other text.</p>
     <hr>
     <h4>Related Findings</h4>
-    <p>This is some other text.</p>
+    <p>Wells Fargo</p>
     <hr>
 
     <h3>Finding Impact</h3>
@@ -60,19 +60,19 @@
     <h3>Analyst Information</h3>
     <hr>
     <h4>Analyst initials</h4>
-    <p>This is some other text.</p>
+    <p>CJ</p>
     <hr>
     <h4>Collaborator</h4>
-    <p>This is some other text.</p>
+    <p>MM, CD, JM</p>
     <hr>
     <h4>Posture</h4>
-    <p>This is some other text.</p>
+    <p>Nearsider insider</p>
     <hr>
 
     <h3>Mitigation</h3>
     <hr>
     <h4>Mitigation</h4>
-    <p>This is some other text.</p>
+    <p>Your script should filter meta characters fr</p>
     <hr>
     <h4>Brief Description</h4>
     <p>This is some other text.</p>
@@ -84,7 +84,7 @@
     <h3>Threat</h3>
     <hr>
     <h4>Threat Relevance</h4>
-    <p>This is some other text.</p>
+    <p>Confirmed</p>
     <hr>
     <h4>Relevance</h4>
     <p>This is some other text.</p>
@@ -96,28 +96,28 @@
     <p>This is some other text.</p>
     <hr>
     <h4>Effectiveness Rating</h4>
-    <p>This is some other text.</p>
+    <p>Good</p>
     <hr>
 
     <h3>Imapact</h3>
     <hr>
     <h4>Impact</h4>
-    <p>This is some other text.</p>
+    <p>VL</p>
     <hr>
     <h4>Impact Description</h4>
-    <p>This is some other text.</p>
+    <p>Blind SQL injection</p>
     <hr>
     <h4>Impact Level</h4>
-    <p>This is some other text.</p>
+    <p>Blind SQL injection</p>
     <hr>
 
     <h3>Severity</h3>
     <hr>
     <h4>Severity</h4>
-    <p>This is some other text.</p>
+    <p>Critical</p>
     <hr>
     <h4>Severity Category Score</h4>
-    <p>This is some other text.</p>
+    <p>8</p>
     <hr>
     <h4>Vulnerability Severity Level</h4>
     <p>This is some other text.</p>
@@ -129,10 +129,10 @@
     <h3>Risk</h3>
     <hr>
     <h4>Risk</h4>
-    <p>This is some other text.</p>
+    <p>VL</p>
     <hr>
     <h4>likehood</h4>
-    <p>This is some other text.</p>
+    <p>M</p>
     <hr>
 
     <h3>finding system level impact</h3>
@@ -147,7 +147,7 @@
     <p>This is some other text.</p>
     <hr>
     <h4>Impact Score</h4>
-    <p>This is some other text.</p>
+    <p>8</p>
     <hr>
 
 {% endblock content %}
