Remove some dummy data

--- a/flaskProject/templates/FindingView.html
+++ b/flaskProject/templates/FindingView.html
@@ -48,10 +48,10 @@
     <h3>Finding Impact</h3>
     <hr>
     <h4>Confidentiality</h4>
-    <p>This is some other text.</p>
+    <p>H</p>
     <hr>
     <h4>Integrity</h4>
-    <p>This is some other text.</p>
+    <p>L</p>
     <hr>
     <h4>Availability</h4>
     <p>This is some other text.</p>
@@ -87,7 +87,7 @@
     <p>Confirmed</p>
     <hr>
     <h4>Relevance</h4>
-    <p>This is some other text.</p>
+    <p>Confirmed</p>
     <hr>
 
     <h3>Countermeasure</h3>
@@ -138,13 +138,13 @@
     <h3>finding system level impact</h3>
     <hr>
     <h4>Confidentiality Finding Impact System</h4>
-    <p>This is some other text.</p>
+    <p>H</p>
     <hr>
     <h4>Integrity Finding Impact on System</h4>
-    <p>This is some other text.</p>
+    <p>M</p>
     <hr>
     <h4>Availability Finding Impact on System</h4>
-    <p>This is some other text.</p>
+    <p>L</p>
     <hr>
     <h4>Impact Score</h4>
     <p>8</p>
