--- a/flaskProject/templates/FindingsView.html
+++ b/flaskProject/templates/FindingsView.html
@@ -6,7 +6,7 @@
     <h1>Findings Overview </h1>
     <div class="btn-group">
         <a class="btn btn-primary" href="{{ url_for('CreateFinding') }}" role="button">Add Finding</a>
-        <a class="btn btn-primary" href="#" role="button">ERB Report</a>
+        <a class="btn btn-primary" href="{{ url_for('AnalystProgressSummaryContentView') }}" role="button">ERB Report</a>
         <a class="btn btn-primary" href="#" role="button">Risk Matrix</a>
         <a class="btn btn-primary" href="#" role="button">Final Report</a>
     </div>
@@ -71,6 +71,7 @@
                 </div>
             </li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventTree') }}"> Event Tree</a></li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('AnalystProgressSummaryContentView') }}"> Analyst Progress Summary</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventView') }}"> Systems</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('SystemView') }}"> Tasks</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('TaskView') }}"> Subtasks</a></li>
