removed reference to Analyst Progress summary from ERB button

--- a/flaskProject/templates/FindingsView.html
+++ b/flaskProject/templates/FindingsView.html
@@ -6,7 +6,7 @@
     <h1>Findings Overview </h1>
     <div class="btn-group">
         <a class="btn btn-primary" href="{{ url_for('CreateFinding') }}" role="button">Add Finding</a>
-        <a class="btn btn-primary" href="{{ url_for('AnalystProgressSummaryContentView') }}" role="button">ERB Report</a>
+        <a class="btn btn-primary" href="#" role="button">ERB Report</a>
         <a class="btn btn-primary" href="#" role="button">Risk Matrix</a>
         <a class="btn btn-primary" href="#" role="button">Final Report</a>
     </div>
